--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-contacts": "~8.6.0",
+    "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-sensors": "~9.2.0",
+    "expo-sharing": "~8.5.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
