--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-updates": "~0.4.0",
     "native-base": "^2.15.0",
     "react": "16.13.1",
+    "react-countdown": "^2.3.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
